--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
 author_profile: true
+classes: wide
+header:
+  overlay_color: "#000"
+  overlay_filter: "0.5"
+excerpt: "블로그에 오신 것을 환영합니다"
+intro: 
+  - excerpt: '최신 포스트를 확인하세요.'
 ---
